@@ -1,3 +1,8 @@
+2007-08-21  Michael Hutchinson <m.j.hutchinson@gmail.com>
+
+	* sample/SourceViewTest.cs: Add an option to specify the source 
+	  language.
+
 2007-08-20  Michael Mutchinson <m.j.hutchinson@gmail.com>
 
 	* configure.in: Re-version library to 1.90.3 to match unmanaged 
